--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading"></div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">CCTVs</div>
+                                <div class="portfolio-caption-subheading text-muted">Its good to be watchful always.</div>
                             </div>
                         </div>
                     </div>
@@ -75,8 +75,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Security guards</div>
+                                <div class="portfolio-caption-subheading text-muted">Its better to be secure than sorry</div>
                             </div>
                         </div>
                     </div>
@@ -89,8 +89,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Investigation</div>
+                                <div class="portfolio-caption-subheading text-muted">Hunger for truth, cause truth sets you free.y</div>
                             </div>
                         </div>
                     </div>
@@ -103,8 +103,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">Security personels and bodyguards</div>
+                                <div class="portfolio-caption-subheading text-muted">Being secure its essential</div>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
+                                <div class="portfolio-caption-heading"></div>
                                 <div class="portfolio-caption-subheading text-muted">Meg Ent</div>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Word from the C.E.O of the Isecurity</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
